--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Авторизация пользователей</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <link href="test.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <form action="" method="post">
